[Gepardec/mega#727] fix postgresql vulnerability CVE-2024-1597. Solution like main branch

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jdbc-postgresql</artifactId>
         </dependency>
+        <!-- Temporary override because of CVE-2024-1597 in quarkus-jdbc-postgresql-->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
+        </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-hibernate-validator</artifactId>
