--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <jacoco.version>0.8.7</jacoco.version>
         <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
         <maven-resource-plugin.version>3.1.0</maven-resource-plugin.version>
-        <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+        <surefire-plugin.version>3.2.3</surefire-plugin.version>
         <cxf-codegen-plugin.version>4.0.0</cxf-codegen-plugin.version>
         <liquibase-maven-plugin.version>4.0.0</liquibase-maven-plugin.version>
         <native2ascii-maven-plugin.plugin.version>2.0.1</native2ascii-maven-plugin.plugin.version>
@@ -23,12 +23,12 @@
 
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-io.version>2.11.0</commons-io.version>
-        <guava.version>31.0.1-jre</guava.version>
+        <guava.version>33.2.1-jre</guava.version>
 
-        <quarkus-plugin.version>3.1.3.Final</quarkus-plugin.version>
-        <quarkus.platform.version>3.1.3.Final</quarkus.platform.version>
+        <quarkus-plugin.version>3.12.1</quarkus-plugin.version>
+        <quarkus.platform.version>3.12.1</quarkus.platform.version>
 
-        <ws.rt.version>4.0.0</ws.rt.version>
+        <ws.rt.version>4.0.2</ws.rt.version>
         <xml.resolver.version>20050927</xml.resolver.version>
         <focus-shift.version>0.16.0</focus-shift.version>
         <assertj.version>3.21.0</assertj.version>
@@ -75,11 +75,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest-client</artifactId>
+            <artifactId>quarkus-resteasy-client</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest-client-jackson</artifactId>
+            <artifactId>quarkus-resteasy-client-jackson</artifactId>
         </dependency>
         <!-- Quarkus MicroProfile-Extensions -->
         <dependency>
@@ -154,12 +154,10 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -224,6 +222,11 @@
             <groupId>jakarta.mail</groupId>
             <artifactId>jakarta.mail-api</artifactId>
             <version>${jakarta.mail-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
     <build>
